# railscale

./: .gitignore  Cargo.toml  README.md  example-carriage.lua  example-dns.lua  meow.txt  railscale.pcap  train_words.md
.beads/: issues.jsonl
bogie/: Cargo.toml
bogie/benches/: coupler.rs  micro.rs  pipeline.rs
bogie/conformance/: run.sh  run_tls.sh  test_basic_get.sh  test_body_echo.sh  test_client_disconnect_early.sh  test_connection_close.sh  test_content_length_mismatch.sh  test_delete_request.sh  test_empty_body_post.sh  test_head_request.sh  test_header_forwarding.sh  test_host_header_required.sh  test_http10_close.sh  test_large_body.sh  test_large_headers.sh  test_malformed_request.sh  test_many_headers.sh  test_options_request.sh  test_oversized_header.sh  test_oversized_request_line.sh  test_patch_request.sh  test_post_with_body.sh  test_proxy_survives_rapid_connects.sh  test_put_request.sh  test_response_body_preserved.sh  test_response_headers_forwarded.sh  test_response_status_codes.sh  test_smuggling_cl_te.sh  test_smuggling_duplicate_cl.sh  test_smuggling_te_cl.sh  test_smuggling_te_obfuscation.sh  test_tls_basic_get.sh  test_tls_connection_close.sh  test_tls_expired_cert.sh  test_tls_openssl_handshake.sh  test_tls_plaintext_rejected.sh  test_tls_post_with_body.sh  test_tls_upstream_down.sh  test_upstream_down.sh
bogie/conformance/helpers/: assertions.sh  common.sh
bogie/examples/: tls_proxy.rs
bogie/src/: generators.rs  harness.rs  lib.rs
bogie/tests/: compliance_matrix.rs  integration.rs  integration_edge_cases.rs  integration_methods.rs  integration_security.rs  keepalive_test.rs  proptest_codec.rs  proptest_derive.rs  proptest_tls.rs  smuggling.rs  tls_integration.rs  tls_passthrough_integration.rs
carriage/: Cargo.toml
carriage/examples/: basic.rs  bench.rs  routed.rs  sock.rs
carriage/src/: lib.rs
carriage/src/http/: codec.rs  derive.rs  error.rs  frame.rs  hook.rs  mod.rs  parser.rs  pipeline.rs  response_codec.rs  response_parser.rs  turnout.rs
carriage/src/tcp/: mod.rs
carriage/src/tcp/dest/: mod.rs  native.rs  routed.rs  unixsocket.rs
carriage/src/tcp/source/: mod.rs  native.rs  unixsocket.rs
carriage/tests/: codec_test.rs  derive_test.rs  destination_test.rs  frame_test.rs  http_turnout_test.rs  integration_test.rs  parser_test.rs  pipeline_test.rs  response_codec_test.rs  response_parser_test.rs  source_test.rs
carriages/: Cargo.toml
carriages/examples/: basic.rs  bench.rs  routed.rs  sock.rs
carriages/src/: lib.rs  metrics.rs
carriages/src/http/: codec.rs  error.rs  mod.rs  parser.rs  pipeline.rs
carriages/src/tcp/: destination.rs  mod.rs  router.rs  source.rs
carriages/tests/: integration_test.rs  pipeline_test.rs
conductor/: Cargo.toml
conductor/src/: lib.rs
coupler/: Cargo.toml
coupler/src/: lib.rs
coupler/src/flow/: http.rs  http_to_https.rs  https.rs  https_to_http.rs  mod.rs  tcp.rs  tls.rs
coupler/src/shunt/: mod.rs  tcp.rs  tls.rs  unix.rs
coupler/tests/: flow_http_test.rs  flow_http_to_https_test.rs  flow_https_test.rs  flow_https_to_http_test.rs  flow_tcp_test.rs  flow_tls_test.rs  shunt_test.rs
docs/: architecture.mermaid
locomotive/: Cargo.toml
locomotive/examples/: basic.rs
locomotive/src/: codec.rs  lib.rs  parser.rs
locomotive/tests/: codec_test.rs  parser_test.rs
poc/: gen-chart.py  plower.sh
rail_proto/: Cargo.toml
rail_proto/src/: main.rs
rail_proto/src/carriage/: mod.rs  nontailscale.rs  ticket_pipeline.rs
rail_proto/src/carriage/passengers/: http.rs  tls.rs
rail_proto/tests/: http_passenger_tests.rs  tls_passenger_tests.rs
track/: Cargo.toml
track/src/: frame.rs  lib.rs  service.rs
track/tests/: service_test.rs
train_track/: Cargo.toml
train_track/src/: error.rs  lib.rs  recorder.rs
train_track/src/atom/: derive.rs  frame.rs  mod.rs  parser.rs  phase.rs  raw.rs  switch_rail.rs
train_track/src/capture/: format.rs  mod.rs  pcap.rs
train_track/src/core/: composed.rs  error_mapper.rs  hook.rs  mod.rs  pipeline.rs  service.rs  shunt.rs  shuttle.rs  stabling.rs  turnout.rs
train_track/src/destinations/: file.rs  mod.rs  multi.rs  route.rs
train_track/src/io/: batcher.rs  departure.rs  destination.rs  mod.rs  router.rs
train_track/tests/: capture_handle_test.rs  capture_integration_test.rs  composed_flow_test.rs  composed_test.rs  departure_test.rs  destination_test.rs  error_test.rs  frame_test.rs  parser_test.rs  pcap_destination_test.rs  pcapng_format_test.rs  pipeline_trait_test.rs  raw_test.rs  service_test.rs  shunt_test.rs  shuttle_test.rs  source_test.rs  stabling_test.rs  switch_rail_test.rs  turnout_test.rs
trezorcarriage/: Cargo.toml
trezorcarriage/src/: client.rs  destination.rs  frame.rs  lib.rs  parser.rs  pipeline.rs  terminator.rs  turnout.rs
trezorcarriage/tests/: client_test.rs  destination_test.rs  frame_test.rs  integration_test.rs  parser_test.rs  pipeline_test.rs  terminator_test.rs  turnout_test.rs
