[workspace]
members = ["poc", "carriage", "train_track", "conductor", "trezorcarriage", "bogie", "coupler", "proxies"]
resolver = "3"


[workspace.dependencies]
async-trait = "0.1.89"
tokio = {version = "1.50.0", features = ["rt-multi-thread", "net", "io-util", "macros", "time", "sync", "signal"]}
tokio-stream = {version = "0.1.18"}
tokio-util = {version = "0.7.18", features = ["codec"]}
bytes = "1"
memchr = "2"
pin-project-lite = "0.2"
proptest = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.11.0"
sysinfo = "0.38"
opentelemetry = { version = "0.27", features = ["metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["metrics", "rt-tokio"] }
opentelemetry-stdout = { version = "0.27", features = ["metrics"] }
memmap2 = "0.9.10"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
rcgen = "0.13"
async-stream = "0.3"