[package]
name = "bogie"
version = "0.1.0"
edition = "2024"
publish = false

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("metrics-full"))'] }

[dependencies]
carriage = { path = "../carriage", default-features = false }
train_track = { path = "../train_track", default-features = false }
trezorcarriage = { path = "../trezorcarriage" }
coupler = { path = "../coupler" }
bytes = { workspace = true }
tokio = { workspace = true }
proptest = { workspace = true }
memchr = { workspace = true }
tokio-util = { workspace = true }
rcgen = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
tokio-stream = { workspace = true }
rustls-pemfile = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "net", "io-util", "macros", "time", "sync"] }
criterion = { version = "0.5", features = ["html_reports"] }
socket2 = "0.5"

[[bench]]
name = "micro"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "coupler"
harness = false
