[package]
name = "carriage"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = {workspace = true}
train_track = { path = "../train_track", default-features = false }
bytes = { workspace = true }
memchr = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
pin-project-lite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-stdout = { workspace = true, optional = true }


[features]
default = ["metrics-minimal"]
metrics-minimal = ["train_track/metrics-minimal", "dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-stdout"]
metrics-full = ["metrics-minimal", "train_track/metrics-full"]
metrics-erased = ["train_track/metrics-erased"]
log-raw = ["train_track/log-raw"]
derive-debug = ["train_track/derive-debug"]
capture = ["train_track/capture"]
