[package]
name = "conductor"
version = "0.1.0"
edition = "2024"

[dependencies]
carriages = { path = "../carriages" }
train_track = { path = "../train_track" }
bytes = { workspace = true }
memchr = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[features]
default = ["metrics-minimal"]
metrics-minimal = ["carriages/metrics-minimal"]
metrics-full = ["carriages/metrics-full"]
metrics-erased = ["carriages/metrics-erased"]
log-raw = ["carriages/log-raw"]
