[package]
name = "conductor"
version = "0.1.0"
edition = "2024"

[dependencies]
carriage = { path = "../carriage" }
train_track = { path = "../train_track" }
bytes = { workspace = true }
memchr = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[features]
default = ["metrics-minimal"]
metrics-minimal = ["carriage/metrics-minimal"]
metrics-full = ["carriage/metrics-full"]
metrics-erased = ["carriage/metrics-erased"]
log-raw = ["carriage/log-raw"]
capture = ["train_track/capture"]
