[package]
name = "rail_proto"
version = "0.1.0"
edition = "2024"

[features]
default = []
tailscale = []  # enable once rsnet is wired in

[[bin]]
name = "railscale"
path = "src/main.rs"

[dependencies]
async-trait = {workspace = true}
tokio = {workspace = true}
tokio-stream = {workspace = true}
tokio-util = {workspace = true}
bytes = {workspace = true}
# rsnet = "0.1"  # uncomment once published to crates.io

[dev-dependencies]
proptest = {workspace = true}
tokio = {workspace = true}