[package]
name = "train_track"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
pin-project-lite = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true, optional = true }
sysinfo = { workspace = true, optional = true }
memmap2 = {workspace = true}
async-trait = {workspace = true}
memchr = {workspace = true}
tokio-util = { workspace = true }
async-stream = { workspace = true }

[dev-dependencies]
async-stream = { workspace = true }

[features]
default = ["metrics-minimal"]
metrics-minimal = ["dep:opentelemetry"]
metrics-full = ["metrics-minimal", "dep:sysinfo"]
metrics-erased = []
log-raw = []
derive-debug = []
